CartItemRepository methods done